// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityLink should generate a link based on the entity sharedId and if it has file or not 1`] = `
<[object Object]
  value={
    Object {
      "_id": "123",
      "sharedId": "abc",
    }
  }
>
  <EntityLink>
    I want this as the link content
  </EntityLink>
</[object Object]>
`;

exports[`EntityLink should generate a link to the document viewer when it has file 1`] = `
<[object Object]
  value={
    Object {
      "_id": "123",
      "file": Object {},
      "sharedId": "abc",
    }
  }
>
  <EntityLink>
    I want this as the link content
  </EntityLink>
</[object Object]>
`;
